# cargo-veristat

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  discovery.rs  extract.rs  gfm.rs  main.rs  rodata.rs  veristat.rs
tests/bpf/: fail.bpf.c  pass.bpf.c  roundtrip.bpf.c
