[package]
name = "cargo-veristat"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
rustc-demangle = "0.1"
csv = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
anyhow = "1"
serde_json = "1"

[features]
integration = []

[dev-dependencies]
object = { version = "0.36", features = ["write"] }
