[package]
name = "cargo-veristat"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-2.0"
description = "Cargo subcommand for verifying BPF programs embedded in Rust binaries via veristat"
repository = "https://github.com/likewhatevs/cargo-veristat"
readme = "README.md"
keywords = ["bpf", "ebpf", "veristat", "cargo", "verification"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.19"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
rustc-demangle = "0.1"
csv = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
anyhow = "1"
serde_json = "1"

[features]
integration = []

[dev-dependencies]
object = { version = "0.36", features = ["write"] }
